--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <title>this is my site for learning Github</title>
+  </head>
   <body>
     Hello there, awesome person!
   </body>
